	* inst/include/Rcpp/vector/proxy.h: Idem
	* inst/include/Rcpp/vector/traits.h: Idem
	* inst/include/Rcpp/Environment.h: Idem
	* inst/include/Rcpp/Function.h: Idem
	* inst/include/Rcpp/Module.h: Idem
	* inst/include/Rcpp/S4.h: Idem
	* inst/include/Rcpp/as.h: Idem
	* inst/include/Rcpp/exceptions.h: Idem
	* inst/include/Rcpp/r_cast.h: Idem
	* src/attributes.cpp: Idem
	* src/barrier.cpp: Idem

2025-12-30  Dirk Eddelbuettel  <edd@debian.org>

	* tests/tinytest.R: Refine decision of when not to run all tests even
	when development version number is seen

2025-12-28  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Replace installation from drat section with r-universe

2025-12-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* inst/include/Rcpp/DataFrame.h (nrow): Simplified per #1430 discussion
	relying on compact sequence representation removing use of ATTRIB
	* inst/include/Rcpp/proxy/AttributeProxy.h (hasAttribute): For R
	4.6.0, rewritten using R_mapAttrib() avoiding to-be-removed ATTRIB()

2025-12-21  Dirk Eddelbuettel  <edd@debian.org>

	* .github/workflows/docker.yaml: Add workflow_dispatch, update
	checkout action

2025-12-19  Dirk Eddelbuettel  <edd@debian.org>

	* man/RcppUnitTests.Rd: Removed outdated help page

2025-12-17  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* DESCRIPTION (Depends): Add 'R (>= 3.5.0)'

2025-12-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll micro version and date
	* inst/include/Rcpp/config.h: Idem

	* src/barrier.cpp (dataptr): Remove check for 'R (>= 3.5.0)'
	* inst/include/Rcpp/Rmath.h: Remove check for 'R (>= 3.1.2)'
	* inst/include/Rcpp/Symbol.h: Remove check for 'R (>= 3.2.0)'
	* inst/include/Rcpp/exceptions.h: Remove check for 'R (>= 3.5.0)'
	* inst/include/Rcpp/r/headers.h: Idem
