@@ -22,6 +22,13 @@
 	* inst/include/Rcpp/r_cast.h: Idem
 	* src/attributes.cpp: Idem
 	* src/barrier.cpp: Idem
+2026-01-04  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/include/RcppCommon.h: No longer require RCPP_USING_UNWIND_PROTECT
+	* inst/include/Rcpp/r/headers.h: Idem
+	* inst/include/Rcpp/api/meat/Rcpp_eval.h: Idem
+	* inst/tinytest/cpp/stack.cpp: No longer test with RCPP_USING_UNWIND_PROTECT
+	* inst/tinytest/test_interface.R: Idem
 
 2025-12-30  Dirk Eddelbuettel  <edd@debian.org>
 
